# ome-datatree

./: README.md  environment.yml  pyproject.toml  setup.cfg
notebooks/: Example-ome-datatree-usage.ipynb
ome_datatree/: __init__.py  ome_datatree.py
