[metadata]
name = ome-datatree
author = B-Open
author_email = software@bopen.eu
license = Apache License 2.0
description = backend for opening ome-zarr into xarray datatree
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.9
install_requires =
    datatree@git+https://github.com/xarray-contrib/datatree.git
    zarr >= 2.11.0
    xarray >= 0.20.2
include_package_data = False

